[package]
name = "teph_show_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
tephrite_rs = { git = "https://github.com/InsightCenterNoodles/tephrite_rs.git", rev = "a0db77688b84ac542c6d4b17956abcf38abc4acf" }
bevy = "0.17.3"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

