[package]
name = "teph_show_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
tephrite_rs = { git = "https://github.com/InsightCenterNoodles/tephrite_rs.git", rev = "823107fcd568c42baa0218908ebeea9ecbf89348" }
bevy = "0.17.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
toml = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

